# LoyMath

./: .gitignore  CMakeLists.txt  README.md  main.cpp
LoyMath/: Complex.h  FFT.h  FIR.h  Float16.h  IIR.h  Matrix.h  MatrixTmpl.h  Quaternion.h
src/: main.cpp
src/LoyMath/: Complex.h  Cordic.h  FFT.h  KalmanFilter.h  LutInterp.h  Matrix.h
src/test/: testCordic.cpp  testFFT.cpp  testFp16.cpp  testLinApprox.cpp  testLutInterp.cpp  testMatrix.nb  testQuaternion.cpp
src/test/kalman_data/: kdc
test/: testComplex.cpp  testCpElisionRVO.cpp  testFFT.cpp  testFIR.cpp  testFp16.cpp  testIIR.cpp  testKalmanFilter.cpp  testLinApprox.cpp  testMatrix.cpp  testQuaternion.cpp
test/kalman_data/: kd
